--- a/src/app/quienes-somos/feature-somos/feature-somos.component.html
+++ b/src/app/quienes-somos/feature-somos/feature-somos.component.html
@@ -22,24 +22,13 @@
     >
       <h1>¿Quienes Somos?</h1>
       <div>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur,
-        quam eius, repellendus nisi et maiores error delectus atque soluta
-        inventore mollitia culpa magni harum perspiciatis amet. Explicabo id
-        rerum deserunt?
-      </div>
-      <br />
-      <div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, doloribus
-        itaque. Aperiam vitae facilis libero similique dolorum officia harum
-        aliquam enim? Repellat tempora alias ea ratione aliquam sapiente,
-        suscipit voluptate.
-      </div>
-      <br />
-      <div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
-        obcaecati velit veniam totam numquam molestias sed laborum nostrum
-        perferendis eligendi iure saepe sapiente nulla inventore similique qui
-        ipsa, dolore quos.
+        La Red Latinoamericana de Seguridad en Calderas (RLSC) es una entidad de
+        bienestar social, de carácter privado, no lucrativa y de duración
+        indefinida, cuyo propósito es promover la generación y difusión de
+        conocimiento relacionados con las calderas y equipos periféricos, a
+        través de los más altos valores y profesionalismo de sus líderes y
+        miembros, y servir de guía para el desarrollo de las mejores prácticas
+        gerenciales y técnicas sobre dichos equipos en la Región.
       </div>
     </div>
   </div>
@@ -53,10 +42,16 @@
     >
       <h1>Misión</h1>
       <div>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur,
-        quam eius, repellendus nisi et maiores error delectus atque soluta
-        inventore mollitia culpa magni harum perspiciatis amet. Explicabo id
-        rerum deserunt?
+        Somos un grupo de expertos en operación de calderas de vapor con la
+        finalidad de compartir experiencias para eliminar accidentes en estos
+        equipos que provoquen daños a la integridad física de las personas que
+        se desenvuelven alrededor de los mismos, además de proteger el
+        medioambiente por medio de controles en la emisión de gases de
+        combustión, realizando capacitaciones, inspecciones y apoyo técnico,
+        aportando conocimientos por experiencias para salvar vidas de personas
+        cercanas a una caldera en operación, brindando el reglamento operativo
+        que mencione las condiciones de los equipos generadores de vapor y
+        capacitar a los operadores en cada uno de los países de Latinoamérica.
       </div>
     </div>
     <div fxFlex="50" fxFlex.xs="100">
@@ -83,24 +78,10 @@
     >
       <h1>Visión</h1>
       <div>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur,
-        quam eius, repellendus nisi et maiores error delectus atque soluta
-        inventore mollitia culpa magni harum perspiciatis amet. Explicabo id
-        rerum deserunt?
-      </div>
-      <br />
-      <div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, doloribus
-        itaque. Aperiam vitae facilis libero similique dolorum officia harum
-        aliquam enim? Repellat tempora alias ea ratione aliquam sapiente,
-        suscipit voluptate.
-      </div>
-      <br />
-      <div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
-        obcaecati velit veniam totam numquam molestias sed laborum nostrum
-        perferendis eligendi iure saepe sapiente nulla inventore similique qui
-        ipsa, dolore quos.
+        Ser el ente regulador de la operación de los equipos generadores de
+        vapor en todos los países de Latinoamérica para evitar accidentes que
+        expongan la vida de las personas alrededor de una caldera y proteger el
+        medio ambiente controlando la emisión de gases de combustión
       </div>
     </div>
   </div>
