--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -212,12 +212,12 @@
         </div>
       </div>
     </div>
-    <div fxLayoutAlign="center center">
+    <!-- <div fxLayoutAlign="center center">
       <img
         src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/tiposMienbros.png?alt=media&token=892e0cd3-ef30-473c-9687-01f2efcc9fa6"
         alt="Tipos de miembros"
         width="80%"
       />
-    </div>
+    </div> -->
   </div>
 </section>
