--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -106,9 +106,9 @@
           <button routerLink="auth/register" mat-menu-item  >
             Registrarse
           </button>
-          <button (click)="singOut()" mat-menu-item >
+          <!-- <button (click)="singOut()" mat-menu-item >
             Cerrar Sesión
-          </button>
+          </button> -->
         </mat-menu>
       </div>
     </div>
