--- a/src/app/comites/comites.component.html
+++ b/src/app/comites/comites.component.html
@@ -7,6 +7,7 @@
       fxLayoutAlign="center center"
       fxFlex="15"
       class="comites"
+      (click)="getComites()"
     >
       <mat-icon>verified_user</mat-icon>
       <span>Automatización, Seguridad y Control</span>
