--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,7 +11,7 @@
   >
     <div fxLayoutAlign="center center">
       <img
-        src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/Logo.jfif?alt=media&token=19ce4a2d-225d-4862-9dce-8b5fae6274ae"
+        src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/logo.png?alt=media&token=e6207e3f-4aed-4561-a985-aba498b12dd4"
         class="logo"
         width.xs="100%"
         height="80"
@@ -20,7 +20,9 @@
     <!-- <mat-divider [vertical]="true" [inset]="true" style="height:50px;"></mat-divider> -->
     <div fxLayoutAlign="center center">
       <div>
-        <button
+        <a
+          href=""
+          target="_blank"
           mat-icon-button
           color="warn"
           aria-label="Example icon button with a home icon"
@@ -43,8 +45,10 @@
               d="M26.572,29.036h4.917l0.772-4.995h-5.69v-2.73c0-2.075,0.678-3.915,2.619-3.915h3.119v-4.359c-0.548-0.074-1.707-0.236-3.897-0.236c-4.573,0-7.254,2.415-7.254,7.917v3.323h-4.701v4.995h4.701v13.729C22.089,42.905,23.032,43,24,43c0.875,0,1.729-0.08,2.572-0.194V29.036z"
             ></path>
           </svg>
-        </button>
-        <button
+        </a>
+        <a
+          href="https://www.linkedin.com/in/red-seguridad-calderas-13b34a257/"
+          target="_blank"
           mat-icon-button
           color="primary"
           aria-label="Example icon button with a home icon"
@@ -75,9 +79,13 @@
               d="M12,19h5v17h-5V19z M14.485,17h-0.028C12.965,17,12,15.888,12,14.499C12,13.08,12.995,12,14.514,12	c1.521,0,2.458,1.08,2.486,2.499C17,15.887,16.035,17,14.485,17z M36,36h-5v-9.099c0-2.198-1.225-3.698-3.192-3.698	c-1.501,0-2.313,1.012-2.707,1.99C24.957,25.543,25,26.511,25,27v9h-5V19h5v2.616C25.721,20.5,26.85,19,29.738,19	c3.578,0,6.261,2.25,6.261,7.274L36,36L36,36z"
             ></path>
           </svg>
-        </button>
+        </a>
       </div>
-      <mat-divider [vertical]="true" [inset]="true" style="height:50px;"></mat-divider>
+      <mat-divider
+        [vertical]="true"
+        [inset]="true"
+        style="height: 50px"
+      ></mat-divider>
       <div
         fxLayout="row"
         fxLayoutAlign="center center"
@@ -86,26 +94,28 @@
       >
         <div fxLayout="row wrap">
           <button routerLink="/" mat-button>INICIO</button>
-          <button mat-button routerLink="/quienes-somos">QUIENES SOMOS</button>
+          <button mat-button routerLink="/quienes-somos">QUIÉNES SOMOS</button>
           <button mat-button routerLink="/servicios">SERVICIOS</button>
-          <button mat-button routerLink="/capacitaciones">CAPACITACIONES</button>
+          <button mat-button routerLink="/capacitaciones">
+            CAPACITACIONES
+          </button>
           <button mat-button routerLink="/normatividad">NORMATIVIDAD</button>
-          <button mat-button routerLink="/comites">COMITES</button>
+          <button mat-button routerLink="/comites">COMITÉS TÉCNICOS</button>
           <!-- <button mat-button>CONTACTANOS</button> -->
         </div>
       </div>
-      <mat-divider [vertical]="true" [inset]="true" style="height:50px;"></mat-divider>
+      <mat-divider
+        [vertical]="true"
+        [inset]="true"
+        style="height: 50px"
+      ></mat-divider>
       <div fxLayout="column">
         <button mat-icon-button [matMenuTriggerFor]="menu" color="warn">
           <mat-icon> person</mat-icon>
         </button>
         <mat-menu #menu="matMenu" fxLayout="row wrap">
-          <button routerLink="auth/login" mat-menu-item >
-            Iniciar Sesión
-          </button>
-          <button routerLink="auth/register" mat-menu-item  >
-            Registrarse
-          </button>
+          <button routerLink="auth/login" mat-menu-item>Iniciar Sesión</button>
+          <button routerLink="auth/register" mat-menu-item>Registrarse</button>
           <!-- <button (click)="singOut()" mat-menu-item >
             Cerrar Sesión
           </button> -->
