--- a/src/app/comites/comites.component.html
+++ b/src/app/comites/comites.component.html
@@ -1,56 +1,48 @@
 <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="30">
   <h1>COMITÉS TÉCNICOS</h1>
-  <div fxLayoutAlign="space-evenly center" fxFlex="100">
-    <div
-      fxLayout="column"
-      fxLayoutGap="30"
-      fxLayoutAlign="center center"
-      fxFlex="15"
-      class="comites"
-      (click)="getComites()"
-    >
-      <mat-icon>verified_user</mat-icon>
-      <span>Automatización, Seguridad y Control</span>
+  <div fxLayoutAlign="center center" fxLayout="column" fxLayoutGap="30">
+    <div fxLayout="row wrap" fxLayoutAlign="center center">
+      <div fxFlex="40">
+        <img
+          src="../../assets/rs=w_600,h_300,cg_true.webp"
+          width="100%"
+          alt=""
+        />
+      </div>
+      <div
+        fxLayout="column"
+        fxLayoutGap="30"
+        fxLayoutAlign="center center"
+        fxFlex="60"
+      >
+        <h1 style="font-size: 40px; text-align: center">
+          Comite de Tratamiento de agua
+        </h1>
+        <h3>Coordinador: Marvin Paredes de Honduras</h3>
+        <a style="font-size: 20px">mparedes@ichemitech.com</a>
+        <h3>Whatsapp: +50494417336</h3>
+      </div>
     </div>
-    <div
-      fxLayout="column"
-      fxLayoutGap="30"
-      fxLayoutAlign="center center"
-      fxFlex="15"
-      class="comites"
-    >
-      <mat-icon>verified_user</mat-icon>
-      <span>Confiabilidad e Integridad Mecánica</span>
-    </div>
-    <div
-      fxLayout="column"
-      fxLayoutGap="30"
-      fxLayoutAlign="center center"
-      fxFlex="15"
-      class="comites"
-    >
-      <mat-icon>verified_user</mat-icon>
-      <span>Seguridad y Control de Procesos</span>
-    </div>
-    <div
-      fxLayout="column"
-      fxLayoutGap="30"
-      fxLayoutAlign="center center"
-      fxFlex="15"
-      class="comites"
-    >
-      <mat-icon>verified_user</mat-icon>
-      <span>Seguridad, Salud Ocupacional, y Ambiental</span>
-    </div>
-    <div
-      fxLayout="column"
-      fxLayoutGap="30"
-      fxLayoutAlign="center center"
-      fxFlex="15"
-      class="comites"
-    >
-      <mat-icon>verified_user</mat-icon>
-      <span>Mantenimiento, Reparación y Alteraciones</span>
+    <div fxLayout="row wrap" fxLayoutAlign="center center">
+      <div
+        fxLayout="column"
+        fxLayoutGap="30"
+        fxLayoutAlign="center center"
+        fxFlex="60"
+      >
+        <h1 style="font-size: 40px; text-align: center">
+          Comite de Inspección y Confiabilidad en Calderas
+        </h1>
+        <h3>Coordinador: Estuardo Montaván</h3>
+        <a style="font-size: 20px">Info@redseguridadcalderas.org</a>
+      </div>
+      <div fxFlex="40">
+        <img
+          src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/misi%C3%B3n.jpg?alt=media&token=e8355509-77bb-4a48-89d8-325e604d5971"
+          width="100%"
+          alt=""
+        />
+      </div>
     </div>
   </div>
 </div>
