--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -273,9 +273,14 @@
             </form>
           </div>
           <div fxFlex="90" fxLayoutAlign="end center">
-            <button mat-raised-button color="primary" type="submit">
+            <a
+              mat-raised-button
+              color="primary"
+              type="submit"
+              href="mailto:info@redseguridadcalderas.org?Subject=RLSC"
+            >
               Enviar
-            </button>
+            </a>
           </div>
         </mat-card-content>
       </mat-card>
