--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -100,8 +100,14 @@
             CAPACITACIONES
           </button>
           <button mat-button routerLink="/normatividad">NORMATIVIDAD</button>
+          <a
+            mat-button
+            style="color: #7d1838"
+            href="http://webnet.elpoli.edu.co/soscal"
+            target="_blank"
+            >SOSCAL</a
+          >
           <button mat-button routerLink="/comites">COMITÉS TÉCNICOS</button>
-          <!-- <button mat-button>CONTACTANOS</button> -->
         </div>
       </div>
       <mat-divider
