--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
         height="360px"
         style="filter: brightness(0.3)"
       />
-      <h4 class="texto-encima">
+      <h4 class="texto-encima" fxHide.xs="true">
         La Red y sus miembros de forma individual asumen el compromiso de
         mantener y dar a conocer los valores de diversidad, equidad e inclusión;
         a través de mensajes escritos o verbales para favorecer el acceso
@@ -67,7 +67,13 @@
       <!-- guia -->
       <div fxLayout="column" class="cuadrado" fxFill>
         <h1 fxLayoutAlign="center center">GUIA DE USUARIO</h1>
-        <div fxLayoutAlign="space-evenly center" fxFlex="100">
+        <div
+          fxLayoutAlign="space-evenly center"
+          fxFlex="100"
+          fxLayout.xs="column"
+          fxLayoutGap.xs="10"
+          fxLayoutGap="0"
+        >
           <div
             class="cuadrado1"
             fxLayoutAlign="center center"
@@ -97,6 +103,7 @@
         fxLayoutAlign="space-around center"
         fxLayout="row wrap"
         fxLayoutGap="20"
+        fxLayout.xs="column"
       >
         <h1 fxFlex="100" fxLayoutAlign="center center">MEMBRESÍA</h1>
         <span fxFlex="45" style="font-size: 16px; text-align: justify"
@@ -136,6 +143,7 @@
         <img
           src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/derechosRed.png?alt=media&token=4006e51a-358f-40a2-abcd-fe3c593243cc"
           alt="derechos red"
+          width="100%"
         />
       </div>
       <!-- obligaciones -->
@@ -144,6 +152,7 @@
         fxLayoutAlign="center center"
         fxLayoutGap="20"
         class="derechos"
+        fxLayout.xs="column"
       >
         <div fxFlex="40">
           <img
