--- a/src/app/comites/comites.component.html
+++ b/src/app/comites/comites.component.html
@@ -16,7 +16,7 @@
         fxFlex="60"
       >
         <h1 style="font-size: 40px; text-align: center">
-          Comite de Tratamiento de agua
+          Comité de Tratamiento de agua
         </h1>
         <h3>Coordinador: Marvin Paredes de Honduras</h3>
         <a style="font-size: 20px">mparedes@ichemitech.com</a>
@@ -31,7 +31,7 @@
         fxFlex="60"
       >
         <h1 style="font-size: 40px; text-align: center">
-          Comite de Inspección y Confiabilidad en Calderas
+          Comité de Inspección y Confiabilidad en Calderas
         </h1>
         <h3>Coordinador: Estuardo Montaván</h3>
         <a style="font-size: 20px">Info@redseguridadcalderas.org</a>
